# rust_web_demo

./: .env  .gitignore  Cargo.toml  MODULE_STRUCTURE.md  README.md  WARP.md  openapi.yaml  rust_microservices_analysis.md  rust_web_migration_analysis.md
.cargo/: config.toml
docker/: docker-compose-dev.yaml  start.sh  test.sh
docker/mysql/script/init/: 01_setup.sql  20_rust_web_demo.sql  30_xxl-job.sql
iam-core/: .env  Cargo.toml  Dockerfile  Makefile  README.md  docker-compose.yml  env.example
iam-core/doc/: README.md  api.md  architecture.md  功能完善.md  完整设计.md  开发计划.md  快速入门.md  文档说明.md  测试指南.md  部署指南.md
iam-core/doc/api/: README.md  index.html  openapi.json  openapi.yaml
iam-core/docker/: README.md
iam-core/docker/logstash/pipeline/: logstash.conf
iam-core/docker/mysql/conf/: my.conf
iam-core/docker/mysql/init/: 01_setup.sql  10_nacos-mysql.sql
iam-core/docker/mysql/script/init/: 01_setup.sql
iam-core/docker/nginx/: nginx.conf
iam-core/docker/prometheus/: prometheus.yml
iam-core/migrations/: 001_create_events_table.sql  002_create_users_view_table.sql  003_create_tenants_table.sql  004_create_organizations_tables.sql
iam-core/src/: error.rs  lib.rs  main.rs
iam-core/src/application/: dtos.rs  mod.rs
iam-core/src/application/services/: mod.rs  query_service.rs  role_service.rs  user_service.rs
iam-core/src/config/: mod.rs
iam-core/src/domain/: mod.rs
iam-core/src/domain/identity_access/: commands.rs  events.rs  mod.rs
iam-core/src/domain/identity_access/aggregates/: mod.rs  role.rs  user.rs
iam-core/src/infrastructure/persistence/: event_store.rs  mod.rs  projectors.rs
iam-core/src/interface/handlers/: auth_handler.rs  mod.rs  user_handler.rs
iam-core/src/interface/middleware/: auth.rs  mod.rs  validation.rs
iam-core/src/interface/routes/: mod.rs
iam-core/src/monitoring/: mod.rs
iam-core/src/openapi/: mod.rs
iam-core/src/tests/: mod.rs
iam-core/tests/: integration_tests.rs
microservices/: docker-compose.yml  test_microservices.sh
microservices/gateway/: Cargo.toml  Dockerfile
microservices/gateway/src/: main.rs
microservices/shared/: Cargo.toml
microservices/shared/src/: config.rs  errors.rs  lib.rs  registry.rs  tracing.rs
microservices/user-service/: Cargo.toml  Dockerfile
microservices/user-service/src/: main.rs
migrations/: 000_tables.sql  001_create_users_table.sql
src/: errors.rs  handlers.rs  lib.rs  main.rs  middleware.rs
src/config/: app_config.rs
src/handlers/: auth_handlers.rs  health_handlers.rs  user_handlers.rs
src/middleware/: logging.rs
src/models/: user.rs
src/repositories/: user_repository.rs
src/services/: auth_service.rs  user_service.rs
src/utils/: response.rs
