[package]
name = "rust-web-demo"
version = "0.1.0"
edition = "2021"

[dependencies]
# Web框架
axum = "0.7"
tokio = { version = "1.0", features = ["full"] }

# 数据库 - MySQL版本
sqlx = { version = "0.7", features = ["mysql", "runtime-tokio-rustls", "macros", "time"] }
sqlx-cli = "0.7"

# HTTP客户端
reqwest = { version = "0.11", features = ["json", "rustls-tls"] }

# 认证
oauth2 = "4.4"
jsonwebtoken = "9.0"
argon2 = "0.5"

# 缓存和消息队列
redis = { version = "0.24", features = ["tokio-comp", "connection-manager"] }
kafka = "0.9"

# 配置和日志
config = "0.14"
dotenv = "0.15"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }

# 错误处理和验证
anyhow = "1.0"
thiserror = "1.0"
validator = { version = "0.18", features = ["derive"] }

# 中间件
tower = "0.4"
tower-http = { version = "0.5", features = ["cors", "trace", "fs", "compression-gzip"] }

# 监控
prometheus = "0.13"

# 序列化
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# 工具
uuid = { version = "1.0", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
time = { version = "0.3", features = ["serde", "formatting", "parsing"] }

[dev-dependencies]
tokio-test = "0.4"
mockito = "1.0"
