[package]
name = "iam-core"
version = "0.1.0"
edition = "2024"

[dependencies]
# Web framework
axum = { version = "0.7", features = ["macros", "tracing"] }
tower = "0.4"
tower-http = { version = "0.5", features = ["cors", "trace"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Database
sqlx = { version = "0.7", features = ["mysql", "runtime-tokio-rustls", "macros", "time", "json", "migrate"] }
sea-orm = { version = "0.12", features = ["sqlx-mysql", "runtime-tokio-rustls"] }

# Async and traits
async-trait = "0.1"
tokio = { version = "1.0", features = ["full"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Utilities
uuid = { version = "1.0", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
thiserror = "1.0"
anyhow = "1.0"
dotenv = "0.15"
validator = { version = "0.18", features = ["derive"] }
bcrypt = "0.15"
jsonwebtoken = "9.2"
