[package]
name = "gateway"
version = "0.1.0"
edition = "2021"

[dependencies]
# Web框架
axum = "0.7"
tokio = { version = "1.0", features = ["full"] }

# 共享库
shared = { path = "../shared" }

# HTTP客户端
reqwest = { version = "0.11", features = ["json"] }

# 序列化
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# 错误处理
anyhow = "1.0"
thiserror = "1.0"

# 中间件
tower = "0.4"
tower-http = { version = "0.5", features = ["cors", "trace", "timeout"] }

# 路由匹配
regex = "1.0"

# 负载均衡
rand = "0.8"
