[package]
name = "shared"
version = "0.1.0"
edition = "2021"

[dependencies]
# 服务注册与发现
consul = "0.4"

# 配置管理
config = "0.14"
dotenv = "0.15"
serde = { version = "1.0", features = ["derive"] }

# 异步运行时
tokio = { version = "1.0", features = ["full"] }

# 错误处理
anyhow = "1.0"
thiserror = "1.0"

# 日志
tracing = "0.1"

# HTTP客户端
reqwest = { version = "0.11", features = ["json"] }

# 序列化
serde_json = "1.0"
